develop all filters and generate JWT Token