@@ -1,7 +1,6 @@
 package com.kalem.authenticationserver.config;
 
-import com.kalem.authenticationserver.filter.CsrfCookieFilter;
-import jakarta.servlet.http.HttpServletRequest;
+import com.kalem.authenticationserver.filter.*;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.Customizer;
@@ -14,68 +13,49 @@ import org.springframework.security.web.authentication.www.BasicAuthenticationFi
 import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
 import org.springframework.security.web.csrf.CsrfTokenRequestAttributeHandler;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Collections;
+import java.util.List;
+
 
 @Configuration
 public class SecurityConfig {
-
-    /**
-     * NoOpPasswordEncoder is not recommended for production usage.
-     * Use only for non-prod.
-     *
-     * @return PasswordEncoder
-     */
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
-
 
     @Bean
     SecurityFilterChain defaultSecurityFilterChain( HttpSecurity http ) throws Exception {
         CsrfTokenRequestAttributeHandler requestHandler = new CsrfTokenRequestAttributeHandler();
         requestHandler.setCsrfRequestAttributeName( "_csrf" );
-
-        http.securityContext( ( context ) -> context
-                        .requireExplicitSave( false ) )
-                .sessionManagement( session -> session.sessionCreationPolicy( SessionCreationPolicy.ALWAYS ) )
-                .cors( corsCustomizer -> corsCustomizer.configurationSource( new CorsConfigurationSource() {
-                    @Override
-                    public CorsConfiguration getCorsConfiguration( HttpServletRequest request ) {
-                        CorsConfiguration config = new CorsConfiguration();
-                        config.setAllowedOrigins( Collections.singletonList( "http://localhost:4200" ) );
-                        config.setAllowedMethods( Collections.singletonList( "*" ) );
-                        config.setAllowCredentials( true );
-                        config.setAllowedHeaders( Collections.singletonList( "*" ) );
-                        config.setMaxAge( 3600L );
-                        return config;
-                    }
-                } ) ).csrf( ( csrf ) -> csrf.csrfTokenRequestHandler( requestHandler ).ignoringRequestMatchers( "/contact", "/register" )
+        http.sessionManagement( session -> session.sessionCreationPolicy( SessionCreationPolicy.STATELESS ) )
+                .cors( corsCustomizer -> corsCustomizer.configurationSource( request -> {
+                    CorsConfiguration config = new CorsConfiguration();
+                    config.setAllowedOrigins( Collections.singletonList( "http://localhost:4200" ) );
+                    config.setAllowedMethods( Collections.singletonList( "*" ) );
+                    config.setAllowCredentials( true );
+                    config.setAllowedHeaders( Collections.singletonList( "*" ) );
+                    config.setExposedHeaders( List.of( "Authorization" ) );
+                    config.setMaxAge( 3600L );
+                    return config;
+                } ) ).csrf( csrf -> csrf.csrfTokenRequestHandler( requestHandler ).ignoringRequestMatchers( "/contact", "/register" )
                         .csrfTokenRepository( CookieCsrfTokenRepository.withHttpOnlyFalse() ) )
                 .addFilterAfter( new CsrfCookieFilter(), BasicAuthenticationFilter.class )
-                .authorizeHttpRequests( ( requests ) -> requests
-                        .requestMatchers( "/myAccount", "/myBalance", "/myLoans", "/myCards", "/user" ).authenticated()
+                .addFilterAt( new AuthoritiesLoggingAtFilter(), BasicAuthenticationFilter.class )
+                .addFilterAfter( new AuthoritiesLoggingAfterFilter(), BasicAuthenticationFilter.class )
+                .addFilterAfter( new JWTTokenGeneratorFilter(), BasicAuthenticationFilter.class )
+                .authorizeHttpRequests( requests -> requests
+                        .requestMatchers( "/myAccount" ).hasRole( "USER" )
+                        .requestMatchers( "/myBalance" ).hasAnyRole( "USER", "ADMIN" )
+                        .requestMatchers( "/myLoans" ).hasRole( "USER" )
+                        .requestMatchers( "/myCards" ).hasRole( "USER" )
+                        .requestMatchers( "/user" ).authenticated()
                         .requestMatchers( "/notices", "/contact", "/register" ).permitAll() )
                 .formLogin( Customizer.withDefaults() )
                 .httpBasic( Customizer.withDefaults() );
         return http.build();
-        /**
-         *  Configuration to deny all the requests
-         */
-        /*http.authorizeHttpRequests(requests -> requests.anyRequest().denyAll())
-                .formLogin(Customizer.withDefaults())
-                .httpBasic(Customizer.withDefaults());
-        return http.build();*/
+    }
 
-        /**
-         *  Configuration to permit all the requests
-         */
-        /*http.authorizeHttpRequests(requests -> requests.anyRequest().permitAll())
-                .formLogin(Customizer.withDefaults())
-                .httpBasic(Customizer.withDefaults());
-        return http.build();*/
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
     }
 
 }
